objects/tffa__NoteParticipant__c.object
<CustomObject>
    <description>Participant for note entity.</description>
    <fields>
        <fullName>tffa__EntityId__c</fullName>
        <description>Id of the participant entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <description>Type of the participant entity . e.g. APPLICATION, PARTY, STIPULATION</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Note__c</fullName>
        <description>Reference to parent note object</description>
        <label>Note</label>
        <referenceTo>tffa__Note__c</referenceTo>
        <relationshipLabel>NoteParticipants</relationshipLabel>
        <relationshipName>NoteParticipants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether primary participant of the note</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ShareType__c</fullName>
        <description>Note sharing type. Viewer, Collaborator, Inferred permission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Share type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Visibility__c</fullName>
        <description>Specifies whether this file is available to all users, internal users, or shared users</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NoteParticipant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NoteParticipant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NoteParticipants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>